# txsftp

./: .coverage  .dockerignore  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  Dockerfile  INSTALL.md  LICENSE.md  README.md  client_rsa  client_rsa.pub  compose.devcontainer.yaml  compose.yaml  docker-compose.yml  id_rsa  id_rsa.pub  package-lock.json  package.json  pylintrc  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
docker/: entrypoint.sh  init.sql
scripts/: add_user.py  entrypoint.sh  regenerate_plugin_cache.py  upsert_user.py
src/twisted/plugins/: txsftp_plugin.py
src/txsftp/: auth.py  dbapi.py  gpg.py  handler.py  server.py  setup.py
src/txsftp/conf/: __init__.py  default.json  schema.psql
tests/: conftest.py  test_auth.py  test_conf.py  test_dbapi.py  test_handler.py  test_server.py
